[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Transition/TransitionIn.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Intro/Intro.gd" type="Script" id=2]
[ext_resource path="res://scenes/Transition/TransitionOut.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/sprites/intro-jail-door.png" type="Texture" id=4]
[ext_resource path="res://scenes/ColorMessage/ColorMessage.tscn" type="PackedScene" id=6]

[node name="Intro" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 240.0 ]
}

[node name="TransitionIn" parent="." instance=ExtResource( 1 )]

[node name="TransitionOut" parent="." instance=ExtResource( 3 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240, 80 )
texture = ExtResource( 4 )

[node name="ColorMessage" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 160 )
message = "En una celda tenebrosa, Phantomas se pudre solo... abandonado..."
speed = 0.033

[node name="ColorMessage2" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 176 )
message = "¿Cuánto tiempo lleva encerrado? no hay manera de saberlo,"
speed = 0.033

[node name="ColorMessage3" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 192 )
message = "hace mucho tiempo que se paró su reloj interno... meses... años quizás..."
speed = 0.033

[node name="ColorMessage4" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 160 )
message = "De todos modos da igual, su batería está a punto de agotarse"
speed = 0.033

[node name="ColorMessage5" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 176 )
message = "y parece que el final está más cerca que nunca..."
speed = 0.033

[node name="ColorMessage6" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, 160 )
message = "...hasta que un día..."
speed = 0.1

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ActTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="transition_out_finished" from="TransitionOut" to="." method="_on_TransitionOut_transition_out_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ActTimer" to="." method="_on_ActTimer_timeout"]
